base/builds/regulus/argocd/bootstrap/argo-httproute/HTTPRoute.argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd.apps.phalnet.com
  namespace: argocd
spec:
  hostnames:
  - "argocd.apps.phalnet.com"
  parentRefs:
  - kind: Gateway
    namespace: default
    name: cluster-ingress
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: argocd-tls
      namespace: argocd
      port: 443
      weight: 1
