base/builds/regulus/argocd/bootstrap/argo-httproute/TLSRoute.argocd.yaml
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: HTTPRoute
metadata:
  name: argocd.apps.phalnet.com
  namespace: argocd
spec:
  hostnames:
  - "argocd.apps.phalnet.com"
  parentRefs:
  - kind: Gateway
    namespace: default
    name: cluster-ingress
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: argocd-server
      namespace: argocd
      port: 443
      weight: 1
